--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -142,8 +142,22 @@ body.template-facetednavigation_view #content .organization-entry, body.template
     float: right;
     margin-right: -0.5em;
     margin-top: 0;
+    position: relative;
+    left: 0;
 }
-
+//correction vue annuaire avec photos
+#visual-portal-wrapper #before-activity::after{
+    display: none;
+}
+#visual-portal-wrapper #before-activity{
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+#visual-portal-wrapper #activity{
+    width: 100%;
+}
 .contacts-facetednav-actions {
     right: 0.5em;
     top: 2.5em;
