--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -279,53 +279,6 @@ h2 a {
                 padding-bottom: 0.5em;
             }
         }
-//         .step {
-//             display: block;
-//             width: 2em;
-//             margin-left: auto;
-//             margin-right: auto;
-//             padding: 0.8em 0;
-//             background: @theme;
-//             color: #fff;
-//             font-size: 80%;
-//             line-height: 1.2em;
-//             opacity: 0.3;
-//         }
-//         .step::after {
-//             border-top: 2px dotted @theme;
-//             display: block;
-//             position: absolute;
-//             content: "";
-//             width: 100%;
-//             height: 100%;
-//             top: 50%;
-//         }
-//         li.current{
-//             .step{
-//                 width: 4em;
-//                 opacity: 1;
-//                 &::after{
-//                     opacity: 0.3;
-//                     width: calc(100% + 1em);
-//                 }
-//             }
-//         }
-//         li + li.current{
-//             .step{
-//                 width: 4em;
-//                 opacity: 1;
-//             }
-//         }
-//         li.current ~ li{
-//             top: -2px;
-//             .step  > div{
-//                 display: none;
-//             }
-//         }
-//         li.current + li{
-//             margin-left: -1em;
-//             margin-left: -0.7em;
-//         }
         & li:last-child .step::after{
             border: none !important;
         }
@@ -342,6 +295,55 @@ h2 a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+// PROJECT TEXT WITH BUTTON
+.portaltype-project #text_with_button{
+    #button{
+        margin-left: 0;
+        li{
+            display: inline-block;
+            padding: 0 1em;
+            margin-bottom: 1em;
+            &:first-child{
+                padding-left: 0;
+            }
+            a{
+                color: @black;
+                position: relative;
+                &.current{
+                    color: @theme;
+                }
+                &::after {
+                    display: block;
+                    content: "";
+                    border-right: 2px solid @black;
+                    width: auto;
+                    height: 90%;
+                    position: absolute;
+                    top: 5%;
+                    left: 100%;
+                    padding-left: 1em;
+                }
+            }
+            &:last-child a::after{
+                display: none;
+            }
+        }
+    }
+    #text{
+        margin-left: 0;
+        margin-bottom: 4em;
+        li{
+            display:none;
+            font-size: 1em;
+            font-family: Abel;
+            &:target{
+                & + li{
+                    display: block;
+                }
+            }
+        }
+    }
 }
 
 // Fix rows and column grid for ie9, ie10 browser:
