Fix style for form faceted-widget
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -201,6 +201,25 @@ h2 a {
     z-index: -1;
     height: 104%;
 }
+// LIST PROJECTS
+.faceted-widget.faceted-text-widget .widget-fieldset .searchButton {
+    border: none !important;
+}
+.faceted-widget.section-search form {
+    margin-top: 0;
+}
+.widget-fieldset form {
+    display: flex;
+    align-items: center;
+}
+.widget-fieldset select{
+    border: none;
+    height: 40px;
+    margin: 0 0.5em;
+    border-radius: 7px;
+    background-color: #fff;
+}
+
 // PROJECTS
 .portaltype-project #content label {
     font-weight: normal;
