Add style to menu
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -108,6 +108,9 @@ h2 a {
     display: inline-block;
     font-size: 100%;
 }
+#portal-siteactions li {
+    margin: 0 1.5em;
+}
 #portal-personaltools-wrapper{
     float: right;
 }
