--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -329,6 +329,7 @@ h2 a {
             display: inline-block;
             padding: 0 1em;
             margin-bottom: 1em;
+            cursor: pointer;
             &:first-child{
                 padding-left: 0;
             }
