Fix background on search form of facet
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -207,6 +207,7 @@ h2 a {
 // LIST PROJECTS
 #faceted-form #top-area {
     padding: 0.5em 0 0 0;
+    background: #f2f2f2;
 }
 .faceted-widget.faceted-text-widget .widget-fieldset .searchButton {
     border: none !important;
@@ -437,6 +438,7 @@ h2 a {
         font-weight: normal;
         padding: 1em 0.5em;
         line-height: 1.2em;
+        color: #000;
     }
     &.news .project .description {
         color: gray;
