--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -406,44 +406,66 @@ h2 a {
     .project{
         border: 1px solid #ddd;
         display: block;
+
+        .date_project{
+            padding: 0.1em 0.5em;
+            color: gray;
+        }
+
+        .title {
+            background: @theme;
+            padding: 0.1em 0.5em;
+            color: #ffffff;
+            font-size: 1em;
+        }
+
+        .image {
+            width: 100%;
+            padding-bottom: 50%;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .description {
+            font-family: open sans;
+            font-size: 0.8em;
+            font-weight: normal;
+            padding: 1em 0.5em;
+            line-height: 1.2em;
+            color: #000;
+        }
     }
     &.news .project{
         border: none;
-    }
-    .project .date_project{
-        padding: 0.1em 0.5em;
-        color: gray;
-    }
-    .project .title {
-        background: @theme;
-        padding: 0.1em 0.5em;
-        color: #ffffff;
-        font-size: 1em;
-    }
-    &.news .project .title {
-        background: transparent;
-        color: @black;
-        font-weight: bold;
-    }
-    .project .image {
-        width: 100%;
-        padding-bottom: 50%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    .project .description {
-        font-family: open sans;
-        font-size: 0.8em;
-        font-weight: normal;
-        padding: 1em 0.5em;
-        line-height: 1.2em;
-        color: #000;
-    }
-    &.news .project .description {
-        color: gray;
-        font-size: 1em;
-        padding: 0 0.5em;
+        .date_project {
+            color: gray;
+            transition: color 0.2s;
+        }
+        .title {
+            background: transparent;
+            color: @black;
+            font-weight: bold;
+            transition: color 0.2s;
+        }
+        .description {
+            color: gray;
+            font-size: 1em;
+            padding: 0 0.5em;
+            margin-bottom: 1em;
+        }
+        &:hover{
+            background: #f2f2f2;
+            transition: background 0.2s;
+            .title,
+            .date_project {
+                color: @theme;
+                transition: color 0.2s;
+            }
+            .description{
+                color: @black;
+                transition: color 0.2s;
+            }
+        }
     }
 }
 
