--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -1,44 +1,48 @@
 //HEADER à corriger sur Liège également car flexbox pas compatible
-#top-logo-slogan-actions-inner {
-    display: block;
-    padding: 0;
-}
-#top-logo-slogan {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0;
-    width: 30%;
-}
-#top-logo {
-    margin-left: 0;
-    margin-top: 0;
-    position: relative;
-    width: 150px;
-    z-index: 1;
-}
-#top-logo-inner {
-    left: 1em;
-}
-#top-slogan {
-    margin-left: 150px;
-    padding: 1em 1em 1em 2em;
-    width: 30%;
-}
-#top-actions {
-    display: inline-block;
-    width: 70%;
-    vertical-align: middle;
-}
+/*
+ *#top-logo-slogan-actions-inner {
+ *    display: block;
+ *    padding: 0;
+ *}
+ *#top-logo-slogan {
+ *    display: inline-block;
+ *    vertical-align: middle;
+ *    padding: 0;
+ *    width: 30%;
+ *}
+ *#top-logo {
+ *    margin-left: 0;
+ *    margin-top: 0;
+ *    position: relative;
+ *    width: 150px;
+ *    z-index: 1;
+ *}
+ *#top-logo-inner {
+ *    left: 1em;
+ *}
+ *#top-slogan {
+ *    margin-left: 150px;
+ *    padding: 1em 1em 1em 2em;
+ *    width: 30%;
+ *}
+ *#top-actions {
+ *    display: inline-block;
+ *    width: 70%;
+ *    vertical-align: middle;
+ *}
+ */
 
 
 
 //HOMEPAGE
-#nav-wrapper {
-    display: none;
-}
-#cpskin-slogan-titre{
-    display: block;
-}
+/*
+ *#nav-wrapper {
+ *    display: none;
+ *}
+ *#cpskin-slogan-titre{
+ *    display: block;
+ *}
+ */
 .bloc-2, .bloc-3 {
     width: 49%;
     display: inline-block;
@@ -47,10 +51,12 @@
 .homepage-titre-rss {
     margin-bottom: 1em;
 }
-h2 a {
-    font-family: Open Sans;
-    color: @black !important;
-}
+/*
+ *h2 a {
+ *    font-family: Open Sans;
+ *    color: @black !important;
+ *}
+ */
 .homepage-results .homepage-standard-results{
     margin-left: 0 !important;
 }
@@ -100,85 +106,87 @@ h2 a {
     left: 0;
     top: 8px;
 }
-.slider_multiple_link{
-    color: #000 !important;
-}
-#portal-personaltools-wrapper,
-#portal-siteactions{
-    display: inline-block;
-    font-size: 100%;
-}
-#portal-siteactions li {
-    margin: 0 1.5em;
-}
-#portal-personaltools-wrapper{
-    float: right;
-}
-#top-banner::before {
-    content: "";
-    display: block;
-    background-color: rgba(255,255,255,0.5);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-#top-banner {
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    display: block;
-}
-#top-banner #top-description {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    top: 40%;
-    color: #000;
-    display: block !important;
-}
-#top-banner #cpskin-slogan-titre,
-#top-banner #cpskin-slogan-description,
-#top-slogan-inner #cpskin-slogan-description{
-    display: none;
-}
-#top-slogan-inner #cpskin-slogan-titre{
-    display: block;
-    font-size: 125%;
-}
-.main-homepage #top-banner #cpskin-slogan-titre {
-    display: block;
-    text-transform: uppercase;
-    font-size: 2em;
-    font-weight: 400;
-}
-.main-homepage #top-banner #cpskin-slogan-titre::after {
-    content: "";
-    display: block;
-    border-bottom: 2px solid #000000;
-    width: 2em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0.5em;
-}
-.main-homepage #top-banner #cpskin-slogan-description {
-    display: block;
-    font-size: 1em;
-    margin-top: 3em;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-}
-.main-homepage.template-folderview #portal-columns{
-    top: 2em;
-}
-#top-logo-slogan-actions-inner,
-#nav-wrapper,
-#portal-breadcrumbs,
-#portal-columns,
-#portal-footer-wrapper{
-    z-index: 2;
-    position: relative;
-}
+/*
+ *.slider_multiple_link{
+ *    color: #000 !important;
+ *}
+ *#portal-personaltools-wrapper,
+ *#portal-siteactions{
+ *    display: inline-block;
+ *    font-size: 100%;
+ *}
+ *#portal-siteactions li {
+ *    margin: 0 1.5em;
+ *}
+ *#portal-personaltools-wrapper{
+ *    float: right;
+ *}
+ *#top-banner::before {
+ *    content: "";
+ *    display: block;
+ *    background-color: rgba(255,255,255,0.5);
+ *    position: absolute;
+ *    height: 100%;
+ *    width: 100%;
+ *}
+ *#top-banner {
+ *    position: relative;
+ *    z-index: 1;
+ *    width: 100%;
+ *    display: block;
+ *}
+ *#top-banner #top-description {
+ *    position: absolute;
+ *    width: 100%;
+ *    text-align: center;
+ *    top: 40%;
+ *    color: #000;
+ *    display: block !important;
+ *}
+ *#top-banner #cpskin-slogan-titre,
+ *#top-banner #cpskin-slogan-description,
+ *#top-slogan-inner #cpskin-slogan-description{
+ *    display: none;
+ *}
+ *#top-slogan-inner #cpskin-slogan-titre{
+ *    display: block;
+ *    font-size: 125%;
+ *}
+ *.main-homepage #top-banner #cpskin-slogan-titre {
+ *    display: block;
+ *    text-transform: uppercase;
+ *    font-size: 2em;
+ *    font-weight: 400;
+ *}
+ *.main-homepage #top-banner #cpskin-slogan-titre::after {
+ *    content: "";
+ *    display: block;
+ *    border-bottom: 2px solid #000000;
+ *    width: 2em;
+ *    margin-left: auto;
+ *    margin-right: auto;
+ *    margin-top: 0.5em;
+ *}
+ *.main-homepage #top-banner #cpskin-slogan-description {
+ *    display: block;
+ *    font-size: 1em;
+ *    margin-top: 3em;
+ *    width: 70%;
+ *    margin-left: auto;
+ *    margin-right: auto;
+ *}
+ *.main-homepage.template-folderview #portal-columns{
+ *    top: 2em;
+ *}
+ *#top-logo-slogan-actions-inner,
+ *#nav-wrapper,
+ *#portal-breadcrumbs,
+ *#portal-columns,
+ *#portal-footer-wrapper{
+ *    z-index: 2;
+ *    position: relative;
+ *}
+ */
 #content #flex #carousel-index.flexslider a,
 #content #flex #carousel-index.flexslider #content #flex a:hover,
 #content #flex #carousel-index.flexslider a:link {
