Update style for thumbs

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -487,6 +487,11 @@
 }
 
 //comment
+.thumb-rating {
+  padding: 0.2em 1em;
+  margin-right: 1em;
+  background-color: #f2f2f2;
+}
 .thumbs-up::before,
 .thumbs-down::before{
     font-family: fontello;
