Add style for template potager ruches
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -263,6 +263,14 @@
     #content .card-index .detail{
         color: @theme-potager;
     }
+    .button {
+        background: @theme-potager;
+        color: #fff;
+        padding: 0 0.5em;
+        text-align: center;
+        width: 100%;
+        display: block;
+    }
 }
 //Acheter local
 .subsection-commerce-alimentation-locale-acheter-local{
@@ -341,6 +349,9 @@
 }
 #content .card-index.columns-2 ol {
     width: 47%;
+}
+#content .card-index.columns-1 ol {
+    width: 100%;
 }
 .card-index ol li {
     list-style: none;
