Fix homepage slider

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -175,9 +175,6 @@
  *    margin-left: auto;
  *    margin-right: auto;
  *}
- *.main-homepage.template-folderview #portal-columns{
- *    top: 2em;
- *}
  *#top-logo-slogan-actions-inner,
  *#nav-wrapper,
  *#portal-breadcrumbs,
@@ -187,6 +184,9 @@
  *    position: relative;
  *}
  */
+.main-homepage.template-folderview #portal-columns{
+    top: 2em;
+}
 #content #flex #carousel-index.flexslider a,
 #content #flex #carousel-index.flexslider #content #flex a:hover,
 #content #flex #carousel-index.flexslider a:link {
