Add style for comments

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -628,3 +628,19 @@ form input.dislike-button{
         .facet(1, @columns, 1);
     }
 }
+
+// Comments
+div.discussion .comment {
+    font-size: 1.2em;
+}
+.row #commenting {
+    font-size: 1em;
+}
+.commentBody {
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+}
