--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -1,48 +1,42 @@
-//HEADER à corriger sur Liège également car flexbox pas compatible
-/*
- *#top-logo-slogan-actions-inner {
- *    display: block;
- *    padding: 0;
- *}
- *#top-logo-slogan {
- *    display: inline-block;
- *    vertical-align: middle;
- *    padding: 0;
- *    width: 30%;
- *}
- *#top-logo {
- *    margin-left: 0;
- *    margin-top: 0;
- *    position: relative;
- *    width: 150px;
- *    z-index: 1;
- *}
- *#top-logo-inner {
- *    left: 1em;
- *}
- *#top-slogan {
- *    margin-left: 150px;
- *    padding: 1em 1em 1em 2em;
- *    width: 30%;
- *}
- *#top-actions {
- *    display: inline-block;
- *    width: 70%;
- *    vertical-align: middle;
- *}
- */
-
-
-
+#top-logo-slogan-actions-inner {
+    display: block;
+    padding: 0;
+}
+#top-logo-slogan {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0;
+    width: 30%;
+}
+#top-logo {
+    margin-left: 0;
+    margin-top: 0;
+    position: relative;
+    width: 150px;
+    z-index: 1;
+}
+#top-logo-inner {
+    left: 1em;
+}
+#top-slogan {
+    margin-left: 150px;
+    padding: 1em 1em 1em 2em;
+    width: 30%;
+}
+#top-actions {
+    display: inline-block;
+    width: 70%;
+    vertical-align: middle;
+}
+#top-actions .top-menu-action dd {
+    display: none;
+}
+#top-actions .actionMenu,
+#portal-siteactions li {
+    margin: 0 !important;
+    margin-left: 3em !important;
+}
 //HOMEPAGE
-/*
- *#nav-wrapper {
- *    display: none;
- *}
- *#cpskin-slogan-titre{
- *    display: block;
- *}
- */
 .bloc-2, .bloc-3 {
     width: 49%;
     display: inline-block;
@@ -51,12 +45,6 @@
 .homepage-titre-rss {
     margin-bottom: 1em;
 }
-/*
- *h2 a {
- *    font-family: Open Sans;
- *    color: @black !important;
- *}
- */
 .homepage-results .homepage-standard-results{
     margin-left: 0 !important;
 }
@@ -106,84 +94,6 @@
     left: 0;
     top: 8px;
 }
-/*
- *.slider_multiple_link{
- *    color: #000 !important;
- *}
- *#portal-personaltools-wrapper,
- *#portal-siteactions{
- *    display: inline-block;
- *    font-size: 100%;
- *}
- *#portal-siteactions li {
- *    margin: 0 1.5em;
- *}
- *#portal-personaltools-wrapper{
- *    float: right;
- *}
- *#top-banner::before {
- *    content: "";
- *    display: block;
- *    background-color: rgba(255,255,255,0.5);
- *    position: absolute;
- *    height: 100%;
- *    width: 100%;
- *}
- *#top-banner {
- *    position: relative;
- *    z-index: 1;
- *    width: 100%;
- *    display: block;
- *}
- *#top-banner #top-description {
- *    position: absolute;
- *    width: 100%;
- *    text-align: center;
- *    top: 40%;
- *    color: #000;
- *    display: block !important;
- *}
- *#top-banner #cpskin-slogan-titre,
- *#top-banner #cpskin-slogan-description,
- *#top-slogan-inner #cpskin-slogan-description{
- *    display: none;
- *}
- *#top-slogan-inner #cpskin-slogan-titre{
- *    display: block;
- *    font-size: 125%;
- *}
- *.main-homepage #top-banner #cpskin-slogan-titre {
- *    display: block;
- *    text-transform: uppercase;
- *    font-size: 2em;
- *    font-weight: 400;
- *}
- *.main-homepage #top-banner #cpskin-slogan-titre::after {
- *    content: "";
- *    display: block;
- *    border-bottom: 2px solid #000000;
- *    width: 2em;
- *    margin-left: auto;
- *    margin-right: auto;
- *    margin-top: 0.5em;
- *}
- *.main-homepage #top-banner #cpskin-slogan-description {
- *    display: block;
- *    font-size: 1em;
- *    margin-top: 3em;
- *    width: 70%;
- *    margin-left: auto;
- *    margin-right: auto;
- *}
- *#top-logo-slogan-actions-inner,
- *#nav-wrapper,
- *#portal-breadcrumbs,
- *#portal-columns,
- *#portal-footer-wrapper{
- *    z-index: 2;
- *    position: relative;
- *}
- */
 .main-homepage.template-folderview #portal-columns{
     top: 2em;
 }
@@ -245,6 +155,84 @@
     margin-bottom: 3em;
 }
 //Timeline
+// Style avec date visible
+// @max-steps-timeline: 10;
+// .style-step(@index) when (@index > 0) {
+//     &.steps_@{index}{
+//         & {
+//             margin: 4em 0;
+//             text-align: center;
+//         }
+//         li {
+//             display: inline-block !important;
+//             margin: 0;
+//             width: calc((100% / @index) - 1%);
+//             text-align: center;
+//             & .step{
+//                 display: block;
+//                 width: 4em;
+//                 margin-left: auto;
+//                 margin-right: auto;
+//                 padding: 0.8em 0;
+//                 background: @theme;
+//                 color: #fff;
+//                 font-size: 80%;
+//                 line-height: 1.2em;
+//                 &::after {
+//                     border-top: 2px solid @theme;
+//                     display: block;
+//                     position: absolute;
+//                     content: "";
+//                     width: 100%;
+//                     height: 100%;
+//                     top: 50%;
+//                 }
+//             }
+//             &.unfinished .step{
+//                 width: 2em;
+//                 opacity: 0.3;
+//                 &::after {
+//                     border-top: 2px dotted @theme;
+//                 }
+//                 & > div{
+//                     display: none;
+//                 }
+//             }
+//             &.current .step::after{
+//                 margin-left: 1em;
+//                 border-top: 2px dotted @theme;
+//                 opacity: 0.3;
+//             }
+//         }
+//         #timeline-line,
+//         #timeline-text{
+//             margin: 0 0 1em 0 !important;
+//             display: inline-block;
+//             width: 100%;
+//         }
+//         #timeline-line li{
+//             position: relative;
+//         }
+//         #timeline-text li{
+//             vertical-align: top;
+//             font-size: 80%;
+//             & div{
+//                 padding: 0 1em;
+//             }
+//             &.current {
+//                 border-bottom: 4px solid @theme;
+//                 padding-bottom: 0.5em;
+//             }
+//         }
+//         & li:last-child .step::after{
+//             border: none !important;
+//         }
+//     }
+//     .style-step(@index - 1);
+// }
+
+
+
 @max-steps-timeline: 10;
 .style-step(@index) when (@index > 0) {
     &.steps_@{index}{
@@ -259,14 +247,14 @@
             text-align: center;
             & .step{
                 display: block;
-                width: 4em;
+                width: 2em;
                 margin-left: auto;
                 margin-right: auto;
                 padding: 0.8em 0;
                 background: @theme;
-                color: #fff;
-                font-size: 80%;
-                line-height: 1.2em;
+                & > div{
+                    display: none;
+                }
                 &::after {
                     border-top: 2px solid @theme;
                     display: block;
@@ -278,7 +266,6 @@
                 }
             }
             &.unfinished .step{
-                width: 2em;
                 opacity: 0.3;
                 &::after {
                     border-top: 2px dotted @theme;
@@ -288,7 +275,6 @@
                 }
             }
             &.current .step::after{
-                margin-left: 1em;
                 border-top: 2px dotted @theme;
                 opacity: 0.3;
             }
@@ -430,6 +416,7 @@
             padding: 0.1em 0.5em;
             color: #ffffff;
             font-size: 1em;
+            min-height: 3em;
         }
 
         .image {
@@ -527,8 +514,100 @@ form input.dislike-button{
     display: none;
 }
 
+@media screen and (max-width: 768px) {
+    #project_facet_view{
+        -ms-grid-columns: 50% 50%;
+        grid-template-columns: calc(50% - 1em) calc(50% - 1em);
+        @columns: 2;
+        .facet(1, @columns, 1);
+    }
+}
 @media screen and (max-width: 600px) {
     // Timeline
+    // Avec date visible
+//     .portaltype-project #timeline{
+//         & #timeline-line{
+//             vertical-align: top;
+//             width: calc(20% - 1em) !important;
+//             & li{
+//                 width: 100%;
+//                 height: auto;
+//                 margin-bottom: 20px !important;
+//                 padding: 0 !important;
+
+//                 & .step{
+//                     line-height: 1em;
+//                     padding: 1em 0 !important;
+//                     height: 2em;
+//                     width: 4em;
+//                     &::after{
+//                         border-top: none;
+//                         border-left: 2px solid @theme;
+//                         display: block;
+//                         position: absolute;
+//                         content: "";
+//                         width: 100%;
+//                         height: 20px;
+//                         top: 100%;
+//                         left: 50%;
+//                     }
+//                 }
+//                 &.current{
+//                     .step::after{
+//                         border-left: 2px dotted @theme;
+//                         margin-left: 0;
+//                     }
+//                 }
+//                 &.current ~ li{
+//                     .step{
+//                         padding: 0 !important;
+//                         height: 2em;
+//                         width: 2em;
+//                     }
+//                     .step::after{
+//                         margin-top: 0;
+//                         border-left: 2px dotted @theme;
+//                     }
+//                 }
+
+//             }
+//         }
+//         & #timeline-text{
+//             vertical-align: top;
+//             width: calc(80% - 1em) !important;
+
+//             & li{
+//                 display: block !important;
+//                 width: auto;
+//                 height: auto;
+//                 margin-bottom: 20px !important;
+//                 padding: 0 !important;
+//                 border-left: 4px solid transparent;
+//                 & > div {
+//                     line-height: 2em;
+//                     padding: 1em 0 !important;
+//                     height: 2em;
+//                     width: auto;
+//                     text-align: left;
+//                     padding: 1em 0.5em !important;
+//                 }
+//                 &.current{
+//                     border-bottom: none !important;
+//                     border-left: 4px solid @theme;
+//                 }
+//                 &.current ~ li{
+//                     height: 2em;
+//                     margin-bottom: 18px !important;
+//                     div {
+//                         line-height: 1.6em;
+//                         padding: 0 0.5em !important;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+
+
     .portaltype-project #timeline{
         & #timeline-line{
             vertical-align: top;
@@ -542,8 +621,11 @@ form input.dislike-button{
                 & .step{
                     line-height: 1em;
                     padding: 1em 0 !important;
-                    height: 2em;
-                    width: 4em;
+                    height: auto;
+                    width: 2em;
+                    & > div {
+                        display: none;
+                    }
                     &::after{
                         border-top: none;
                         border-left: 2px solid @theme;
@@ -585,47 +667,34 @@ form input.dislike-button{
                 width: auto;
                 height: auto;
                 margin-bottom: 20px !important;
-                padding: 0 !important;
+                padding-bottom: 0.5em;
                 border-left: 4px solid transparent;
                 & > div {
-                    line-height: 2em;
-                    padding: 1em 0 !important;
-                    height: 2em;
-                    width: auto;
                     text-align: left;
-                    padding: 1em 0.5em !important;
+                    height: 2em;
                 }
                 &.current{
                     border-bottom: none !important;
                     border-left: 4px solid @theme;
                 }
                 &.current ~ li{
-                    height: 2em;
-                    margin-bottom: 18px !important;
                     div {
-                        line-height: 1.6em;
-                        padding: 0 0.5em !important;
                     }
                 }
             }
         }
     }
-}
-@media screen and (max-width: 768px) {
-    #project_facet_view{
-        -ms-grid-columns: 50% 50%;
-        grid-template-columns: calc(50% - 1em) calc(50% - 1em);
-        @columns: 2;
-        .facet(1, @columns, 1);
-    }
-
-}
-@media screen and (max-width: 600px) {
     #project_facet_view{
         -ms-grid-columns: 100%;
         grid-template-columns: 100%;
         @columns: 1;
         .facet(1, @columns, 1);
+    }
+    #top-logo-slogan-actions-inner{
+        flex-flow: row wrap;
+    }
+    #portal-personaltools-wrapper {
+        display: inline-block !important;
     }
 }
 
