--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -1,40 +1,9 @@
-#top-logo-slogan-actions-inner {
-    display: block;
-    padding: 0;
-}
-#top-logo-slogan {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0;
-    width: 30%;
-}
-#top-logo {
-    margin-left: 0;
-    margin-top: 0;
-    position: relative;
-    width: 150px;
-    z-index: 1;
-}
-#top-logo-inner {
-    left: 1em;
-}
-#top-slogan {
-    margin-left: 150px;
-    padding: 1em 1em 1em 2em;
-    width: 30%;
-}
-#top-actions {
-    display: inline-block;
-    width: 70%;
-    vertical-align: middle;
-}
 #top-actions .top-menu-action dd {
     display: none;
 }
 #top-actions .actionMenu,
 #portal-siteactions li {
-    margin: 0 !important;
-    margin-left: 3em !important;
+    margin: 0 3em 0 0;
 }
 //HOMEPAGE
 .bloc-2, .bloc-3 {
