--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -5,6 +5,12 @@
 #portal-siteactions li {
     margin: 0 3em 0 0;
 }
+
+#portal-logo > img {
+    width: 80%;
+    margin-top: 10%;
+}
+
 //HOMEPAGE
 .bloc-2, .bloc-3 {
     width: 49%;
@@ -334,6 +340,18 @@
 #portal-column-content #viewlet-below-content .discussion,
 #portal-column-content #viewlet-below-content #commenting {
     display: none;
+}
+
+#footer-sitemap div.footer-static {
+    width: 100%;
+}
+
+#portal-footer-wrapper #footer-social {
+    text-align: center;
+}
+
+#content div#accueil {
+    margin-bottom: 2.5em;
 }
 
 // Fix rows and column grid for ie9, ie10 browser:
