Adapt style for project details
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -353,6 +353,11 @@
 #content .card-index.columns-1 ol {
     width: 100%;
 }
+#content .card-index ol.columns-3 li{
+    width: 30%;
+    display: inline-block;
+    vertical-align: top;
+}
 .card-index ol li {
     list-style: none;
 }
