Fix links for documents

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -39,6 +39,13 @@
     h3{
         color: @theme;
     }
+    #content .card-index a[href*=".pdf"]{
+        padding-right: 0;
+    }
+    #content .card-index a[href*=".pdf"]::after{
+        content: none;
+	margin-left: 0;
+    }
     //ALIMENTATION LOCALE
     //
     //CREAFARM
