--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -12,10 +12,16 @@
 }
 
 //HOMEPAGE
+#flex {
+    margin-bottom: 2.5em;
+}
 .bloc-2, .bloc-3 {
     width: 49%;
     display: inline-block;
     vertical-align: top;
+}
+.bloc-2 h4 {
+    font-size: 1.1em;
 }
 .homepage-titre-rss {
     margin-bottom: 1em;
@@ -25,7 +31,7 @@
 }
 .homepage-bloc-item {
     list-style: none;
-    margin-bottom: 1.5em !important;
+    margin-bottom: 0.8em !important;
     position: relative;
 }
 .bloc-2 .homepage-bloc-item {
@@ -40,14 +46,18 @@
     display: inline-block;
 }
 .homepage-bloc-item-title{
-    width: 70%;
+    width: 75%;
+    margin-top: 0.3em;
 }
 .homepage-bloc-item-more {
     background-color: #000000 !important;
     font-weight: 400;
     font-size: 0.8em;
     width: auto;
+    min-width: 6.8em;
     text-align: center;
+    vertical-align: top;
+    margin-top: 0.4em;
 }
 .homepage-bloc-item-more a{
     padding: 0.1em 1em;
@@ -69,6 +79,7 @@
     left: 0;
     top: 8px;
 }
+
 .main-homepage.template-folderview #portal-columns{
     top: 2em;
 }
