Add style for labels

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -1452,3 +1452,11 @@ a.btn-search {
     top: 0;
 }
 
+//labels
+.viewlet-labels .label {
+    color: @front;
+    font-weight: normal;
+    background-color: @theme;
+    padding: 0.25em 0.5em;
+    border-radius: 0.5em;
+}
