Add an icon for the new card view

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -49,6 +49,11 @@
     .faceted-widget.faceted-text-widget .widget-fieldset .searchButton{
         border: none !important;
     }
+    .faceted-widget.faceted-layout-widget.section-affichage label[title="Vue liste"]::before {
+        content: "\f00a";
+        font-family: fontello;
+        margin-right: 0.75em;
+    }
     //ALIMENTATION LOCALE
     //
     //CREAFARM
